Fix exception in automation js bindings

The following stack originates from automation_node.js (within the automation api js internal bindings):
Error: Error in event handler for locationChanged during phase 1: ReferenceError: RoleType is not defined
    at Output.subNode_ (chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/chromeVox2ChromeBackgroundScript.js:899:66)
    at Output.render_ (chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/chromeVox2ChromeBackgroundScript.js:799:6)
    at Output.withLocation (chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/chromeVox2ChromeBackgroundScript.js:779:207)
    at DesktopAutomationHandler.onLocationChanged (chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/chromeVox2ChromeBackgroundScript.js:1546:138)
    at DesktopAutomationHandler.<anonymous> (chrome-extension://mndnfokpggljbaajbnioimlmbfngpief/chromeVox2ChromeBackgroundScript.js:1295:8)

The issue is that |RoleType| is used within |boundsForRange|, but it isn't actually defined anywhere.

The internal bindings do not have access to chrome.automation (since the public bindings are defined later within the page context of the extension).

Since the C++ bindings already check for inlineTextBox, clean up this logic.

This does remove the behavior where |boundsForRange| when passed a non-inlineTextBox, would simply return the node's global bounds. This appears to have been the original intention.

Bug: 918536
Test: manually verify ChromeVox works again when navigating by character (which calls boundsForRange).
Change-Id: I9d77f8d4fe7e8cd6afde2eb9a9b9e1b40aef1d72
Reviewed-on: https://chromium-review.googlesource.com/c/1394793
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Katie Dektar <katie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620048}
Former-commit-id: 7c2cf078f3c913160087e3417d666cdbdb89a1a5